--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,6 +5,8 @@
 :root {
   --primary: #1aac83;
   --error: #e7195a;
+  --primary1: #fff;
+  --primary2: #333;
 }
 body {
   background: #f1f1f1;
@@ -15,29 +17,60 @@ header {
   background: #fff;
 }
 header .container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 10px 20px;
+  max-width: auto;
+  margin-right: 50px;
+  margin: 0;
+  padding: 10px 50px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 header a {
   color: #333;
   text-decoration: none;
 }
+
 .pages {
-  max-width: 1400px;
+  max-width: auto;
+  height: 800px;
   padding: 20px;
+  padding-top: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+  /* background-color: aqua; */
+
   margin: 0 auto;
 }
 
 /* homepage */
 .home {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 0.8fr 3fr 1fr;
+  gap: 100px;
+  height: 100%;
+}
+/* .home .intialsiding{
+  display: grid;
+  grid-template-columns: 0.8fr 3fr 1fr;
+  gap: 100px;
+} */
+
+/* .home .siding {
+  height: auto;
+  background-color: var(--error);
+} */
+
+/* .home .forming {
+  background-color: red;
+  display: ;
+  grid-template-columns: 2fr 1fr;
   gap: 100px;
 }
+.home .documents {
+  background-color: green;
+  display: flex;
+  grid-template-columns: 2fr 1fr;
+  gap: 100px;
+} */
 .document-details {
   background: #fff;
   border-radius: 4px;
@@ -67,7 +100,7 @@ header a {
   color: #333;
 }
 
-/* new workout form */
+/* new document form */
 label,
 input {
   display: block;
@@ -201,3 +234,79 @@ form.forgotpassword {
   background: #fff;
   border-radius: 4px;
 }
+
+/* SideBar CSS */
+/* .navbar {
+  background-color: #ffffff;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.menu-bars {
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
+  color: #000;
+}
+
+.nav-menu {
+  background-color: #ffffff;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 450ms;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: #151414;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: #000000;
+  color: #fff;
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: #ffffff;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+span {
+  margin-left: 16px;
+} */
