--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -71,7 +71,7 @@ header a {
   grid-template-columns: 2fr 1fr;
   gap: 100px;
 } */
-.document-details {
+.file-details {
   background: #fff;
   border-radius: 4px;
   margin: 20px auto;
@@ -79,17 +79,17 @@ header a {
   position: relative;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 }
-.document-details h4 {
+.file-details h4 {
   margin: 0 0 10px 0;
   font-size: 1.2em;
   color: var(--primary);
 }
-.document-details p {
+.file-details p {
   margin: 0;
   font-size: 0.9em;
   color: #555;
 }
-.document-details span {
+.file-details span {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -100,7 +100,7 @@ header a {
   color: #333;
 }
 
-/* new document form */
+/* new file form */
 label,
 input {
   display: block;
