--- a/frontend/src/styles/fileupload.css
+++ b/frontend/src/styles/fileupload.css
@@ -39,7 +39,7 @@ input[type="file"] {
 .custom-file-input {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #007bff; /* Change to your desired button color */
+  background-color: #1aac83; /* Change to your desired button color */
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -47,7 +47,7 @@ input[type="file"] {
 }
 
 .custom-file-input:hover {
-  background-color: #0056b3; /* Change to your desired hover color */
+  background-color: #28a745; /* Change to your desired hover color */
 }
 
 /* Upload button styling */
