--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -1,5 +1,5 @@
 /* .background-image {
-  background-image: url("../images/tropicallogo.jpg");
+  background-image: url("../images/laugh.jpeg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -21,27 +21,56 @@
 .pagehome {
   display: flex;
   align-items: center;
-  align-items: center;
   justify-content: center;
   margin-top: 100px;
   height: 50vh;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 1900px; /* Set a maximum width for the homepage */
 }
 
 .content {
   height: 400px;
   background-color: var(--primary1);
   padding-top: 150px;
+  padding-left: 190px;
+  padding-right: 190px;
   margin-bottom: 0;
   border-radius: 10px;
   text-align: center;
   align-items: center;
   align-content: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  font-size: 18px; /* Increase the font size as needed */
+  line-height: 1.5; /* Increase the line height */
+  margin-bottom: 20px; /* Add space between paragraphs */
+  padding-bottom: 50px;
 }
 
 h1 {
   font-size: 32px;
   margin-bottom: 10px;
+}
+
+#attach-upload {
+  display: none;
+}
+
+.attach-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 5px;
+  background: var(--primary);
+  color: #fff;
+  font-weight: lighter;
+  margin-top: 20px;
+}
+
+.attach-file-upload:hover {
+  cursor: pointer;
 }
 
 .custom-file-upload {
@@ -54,6 +83,10 @@ h1 {
   color: #fff;
   font-weight: lighter;
   margin-top: 20px;
+}
+
+.custom-file-upload:hover {
+  cursor: pointer;
 }
 
 #file-upload {
@@ -69,6 +102,7 @@ h1 {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  display: inline-block;
 }
 
 .upload-button:hover {
@@ -79,4 +113,61 @@ h1 {
   color: var(--primary);
   font-size: 18px;
   margin-top: 10px;
+}
+
+/* Styles for the modal */
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+}
+
+.modal input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+}
+
+.modal button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.modal button.cancel {
+  background-color: #ccc;
 }
