--- a/frontend/src/styles/sharepage.css
+++ b/frontend/src/styles/sharepage.css
@@ -2,121 +2,101 @@
 
 /* layout */
 :root {
-    --primary: #1aac83;
-    --error: #e7195a;
-    --primary1: #fff;
-    --primary2: #333;
-  }
+  --primary: #1aac83;
+  --error: #e7195a;
+  --primary1: #fff;
+  --primary2: #333;
+}
 
 /* Style the page container */
 .sharepage {
-    display: flex;
-    align-items: center;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-    height: 25vh;
-
-    height: 400px;
-    background-color: var(--primary1);
-    padding-top: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-bottom: 0;
-    border-radius: 10px;
-    text-align: center;
-    align-items: center;
-    align-content: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  height: 50vh;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 1900px;
+  background-color: var(--primary1);
 }
 
-.file-input-container{
-    margin-bottom: 10px;
-    background-color:  #1aac83;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.sharepage .file-input-container {
+  margin-bottom: 10px;
+  background-color: #1aac83;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .container {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
-    font-size: 19px;
-    margin-bottom: 20px;
-  }
-  
-  /* Style the form */
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
-  
-  input[type="text"],
-  input[type="file"] {
-    padding: 10px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color:  #1aac83;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color:  #1aac83;
-  }
-  
-  /* Style the notification message */
-  .notification {
-    margin-top: 10px;
-    font-size: 14px;
-    color:  #1aac83;
-  }
-  
-  /* Style the cancel button */
-  button[type="button"] {
-    /* background-color: #1aac83;
+
+.sharepage .container {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.sharepage h1 {
+  font-size: 19px;
+  margin-bottom: 20px;
+}
+
+/* Style the form */
+.sharepage form {
+  display: flex;
+  flex-direction: column;
+}
+
+.sharepage label {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.sharepage input[type="text"],
+.sharepage input[type="file"] {
+  padding: 10px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.sharepage button {
+  padding: 10px 20px;
+  background-color: #1aac83;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.sharepage button:hover {
+  background-color: #1aac83;
+}
+
+/* Style the notification message */
+.sharepage .notification {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #1aac83;
+}
+
+/* Style the cancel button */
+.sharepage button[type="button"] {
+  /* background-color: #1aac83;
     margin-top: 10px;
     color: #fff;
     margin-right: 10px; */
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color:  #1aac83;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    
-  }
-  
-  button[type="button"]:hover {
-    background-color: #1aac83;
-  }
-  
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #1aac83;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.sharepage button[type="button"]:hover {
+  background-color: #1aac83;
+}
