--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -32,7 +32,7 @@ header a {
 
 .pages {
   max-width: auto;
-  height: 800px;
+  height: auto;
   padding: 20px;
   padding-top: 0;
   padding-left: 0;
@@ -45,10 +45,20 @@ header a {
 /* homepage */
 .home {
   display: grid;
-  grid-template-columns: 0.8fr 3fr 1fr;
-  gap: 100px;
+  grid-template-columns: 1fr 5fr 1fr;
+  gap: 60px;
   height: 100%;
 }
+
+/* Adjust gap size for specific columns */
+.home > div:nth-child(1) {
+  margin-right: 5px; /* Smaller gap on the right for the first column */
+}
+
+.home > div:nth-child(3) {
+  margin-left: 15px;
+}
+
 /* .home .intialsiding{
   display: grid;
   grid-template-columns: 0.8fr 3fr 1fr;
@@ -284,86 +294,4 @@ form.forgotpassword {
   padding: 20px;
   background: #fff;
   border-radius: 4px;
-}
-
-/* SideBar CSS */
-/* .navbar {
-  background-color: #ffffff;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
-  color: #000;
-}
-
-.nav-menu {
-  background-color: #ffffff;
-  width: 250px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-}
-
-.nav-menu.active {
-  left: 0;
-  transition: 450ms;
-}
-
-.nav-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-}
-
-.nav-text a {
-  text-decoration: none;
-  color: #151414;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
-}
-
-.nav-text a:hover {
-  background-color: #000000;
-  color: #fff;
-}
-
-.nav-menu-items {
-  width: 100%;
-}
-
-.navbar-toggle {
-  background-color: #ffffff;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-span {
-  margin-left: 16px;
-} */
-
-.uploaded .files {
-  /* background-color: pink; */
-  overflow-y: auto;
-  max-height: 100vh;
 }
