--- a/frontend/src/styles/columnpage.css
+++ b/frontend/src/styles/columnpage.css
@@ -43,3 +43,11 @@
   align-items: center;
   justify-content: center;
 }
+
+.suffix {
+  background-color: pink;
+  border-radius: 50%;
+}
+.suffix:hover {
+  background-color: blue;
+}
