Integration and Migration complete

--- a/frontend/src/styles/columnpage.css
+++ b/frontend/src/styles/columnpage.css
@@ -44,10 +44,10 @@
   justify-content: center;
 }
 
-.suffix {
+/* .suffix {
   background-color: pink;
   border-radius: 50%;
 }
 .suffix:hover {
   background-color: blue;
-}
+} */
