--- a/frontend/src/styles/WelcomePage.css
+++ b/frontend/src/styles/WelcomePage.css
@@ -3,85 +3,169 @@
   --error: #e7195a;
   --primary1: #fff;
   --primary2: #333;
+  --buttonhovering: #177c60;
+}
+/* src/components/Welcome.css */
+.carousel-container .first {
+  background-image: url("../images/shakinghands.jpg");
+}
+.carousel-container .second {
+  background-image: url("../images/checkingdocuments.jpg");
+  filter: brightness(90%);
+}
+.carousel-container .third {
+  background-image: url("../images/studyingdocuments.jpg");
 }
 
-/* WelcomePage.css */
-.welcome-page {
-  text-align: center;
-  padding-top: 10px;
-}
-
-.welc {
-  margin-top: 0;
-  background-color: #1aac83;
-  color: #fff;
-  padding: 20px;
-}
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-}
-
-.images {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 40px;
-  border-radius: 20px;
-}
-
-.image-box {
-  flex: 1;
-  /* padding: 10px; */
-
-  width: 700px; /* Set the desired width */
-  height: auto;
-}
-
-.image-box img {
-  max-width: 95%;
-  height: auto;
-  border-radius: 20px;
-}
-
-.get-started-button {
-  background-color: #1aac83;
-  color: #fff;
-  padding: 20px 30px;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-  border-radius: 20px;
+.carousel-container {
+  width: 100%;
+  margin: 0 auto;
   position: relative;
-  top: 30px;
-  transition: 0.3s ease-in-out;
 }
 
-.get-started-button:hover {
-  background-color: #0e6b50;
+.welcome {
+  height: 60vh;
+  background-size: cover;
+  background-position: center;
+  text-align: left;
+  padding: 100px;
+
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  text-align: left;
 }
 
-p {
-  font-size: 1.2rem;
+.header {
+  background-color: pink;
+  height: 150px;
 }
 
-.features {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 40px;
+.second .fullbody {
+  margin-left: 500px;
+  margin-right: 800px;
+  padding: 50px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.third .fullbody {
+  margin-left: 500px;
+  margin-right: 800px;
+  padding: 50px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.feature {
-  flex: 1;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  margin: 0 10px;
+.first .bigwords h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #2a3855;
 }
 
-.feature h2 {
-  font-size: 1.5rem;
+.first .smallwords p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  color: #2a3855;
+  max-width: 600px;
 }
 
-.feature p {
-  margin-top: 10px;
+.first .startbtn .show {
+  transition: opacity 0.5s, transform 0.5s;
+  opacity: 1;
+}
+
+.first .startbtn .show {
+  transform: translateY(100px);
+}
+
+.first .startbtn button {
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.first .startbtn button:hover {
+  background-color: var(--buttonhovering);
+}
+
+.second .bigwords h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #1a253a;
+}
+
+.second .smallwords p {
+  font-size: 20px;
+  margin-bottom: 30px;
+  color: black;
+  max-width: 600px;
+}
+
+.second .startbtn .show {
+  transition: opacity 0.5s, transform 0.5s;
+  opacity: 1;
+}
+
+.second .startbtn .show {
+  transform: translateY(100px);
+}
+
+.second .startbtn button {
+  background-color: var(--primary);
+  color: var(--primary1);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.second .startbtn button:hover {
+  background-color: var(--buttonhovering);
+}
+.third .bigwords h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #1a253a;
+}
+
+.third .smallwords p {
+  font-size: 20px;
+  margin-bottom: 30px;
+  color: black;
+  max-width: 600px;
+}
+
+.third .startbtn .show {
+  transition: opacity 0.5s, transform 0.5s;
+  opacity: 1;
+}
+
+.third .startbtn .show {
+  transform: translateY(100px);
+}
+
+.third .startbtn button {
+  background-color: var(--primary);
+  color: var(--primary1);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.third .startbtn button:hover {
+  background-color: var(--buttonhovering);
 }
