--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -8,6 +8,7 @@
   --primary1: #fff;
   --primary2: #333;
 }
+
 body {
   background: #f1f1f1;
   margin: 0;
@@ -295,3 +296,15 @@ form.forgotpassword {
   background: #fff;
   border-radius: 4px;
 }
+
+/* .loginbkg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.859);
+  filter: brightness(50%);
+  z-index: -1;
+} */
