--- a/frontend/src/styles/columnpage.css
+++ b/frontend/src/styles/columnpage.css
@@ -44,10 +44,13 @@
   justify-content: center;
 }
 
-/* .suffix {
-  background-color: pink;
+.suffix {
   border-radius: 50%;
+  width: 50px;
+  margin-left: 75px;
+  transition: background-color 0.3s, color 0.3s;
 }
 .suffix:hover {
-  background-color: blue;
-} */
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.43);
+}
